--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@
 body {
   font-family: var(--font-family-primary);
   line-height: 1.6;
-  background-color: var(--dark-blue);
+  background-color: var(--g);
   color: var(--white);
   font-size: 16px;
   overflow-x: hidden;
@@ -94,7 +94,6 @@ h1, h2, h3, h4 {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.6);
   z-index: 10000;
   justify-content: center;
   align-items: center;
@@ -284,29 +283,6 @@ form button[type="submit"]:hover {
   font-family: 'Segoe UI', 'Roboto', sans-serif;
 }
 
-/* Close Button */
-#closeFormBtn {
-  color: #00224D;
-  float: right;
-  font-size: 30px;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-#closeFormBtn:hover {
-  color: #FFB800;
-  /* Gold color on hover */
-}
-
-/* Form Title */
-.modal-content h1 {
-  margin-top: 0;
-  font-size: 26px;
-  color: #00224D;
-  text-align: center;
-  margin-bottom: 20px;
-}
-
 /* Form Structure */
 #applicationForm {
   display: flex;
@@ -360,7 +336,6 @@ form button[type="submit"]:hover {
 #applicationForm button[type="submit"] {
   margin-top: 25px;
   padding: 12px;
-  background-color: #00224D;
   color: white;
   border: none;
   border-radius: 8px;
@@ -457,38 +432,9 @@ form button[type="submit"]:hover {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgba(0, 34, 77, 0.85);
   /* Semi-transparent background */
   padding-top: 60px;
   font-family: 'Segoe UI', 'Roboto', sans-serif;
-}
-
-/* Success Modal Content */
-.success-content {
-  display: flex;
-  background: #033c5ea2;
-  margin: auto;
-  padding: 30px 40px;
-  border: 1px solid #ddd;
-  width: 90%;
-  max-width: 500px;
-  border-radius: 12px;
-  text-align: center;
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
-  animation: popUp 0.5s ease;
-}
-
-/* Close Button */
-#closeSuccessBtn {
-  color: #00224D;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-#closeSuccessBtn:hover {
-  color: #FFB800;
 }
 
 /* Success Text */
@@ -1101,126 +1047,7 @@ form button[type="submit"]:hover {
   margin-right: 5px;
 }
 
-/* Top Bar */
-.top-bar {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 0;
-}
 
-.top-bar a {
-    color: #fff;
-}
-
-.top-bar .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.top-bar span {
-    font-size: 14px;
-}
-
-/* Navigation Bar */
-.navbar {
-    padding: 15px;
-}
-
-.navbar .logo {
-    width: 150px;
-}
-
-.navbar-toggler {
-    border: none;
-}
-
-.nav-item .nav-link {
-    color: #333 !important;
-    padding: 10px 15px;
-}
-
-.nav-item .nav-link:hover {
-    color: #0056b3 !important;
-}
-
-/* Hero Section */
-.hero {
-    position: relative;
-    height: 65vh;
-    background-color: #000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    object-fit: cover;
-    object-position: center;
-    z-index: -1;
-
-}
-
-.carousel-item {
-    height: 100%;
-    background-position: center;
-    transition: transform 1s ease;
-    transform: scale(1.1);
-    cursor: pointer;
-    opacity: 0.7;
-    z-index: 1;
-    transition: opacity 0.5s ease;
-}
-
-.carousel-item img {
-    position: absolute;
-    object-position: center;
-    object-fit: cover;
-    height: 65vh;
-    width: 100%;
-    display: flex;
-}
-
-.carousel-caption h1 {
-    font-size: 3.5em;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-    margin-bottom: 20px;
-    transition: opacity 0.5s ease;
-    color: #fff;
-    opacity: 0;
-    z-index: 2;
-}
-
-.carousel-caption p {
-    font-size: 1.2em;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-    margin-bottom: 8px;
-    transition: opacity 0.5s ease;
-    box-sizing: border-box;
-    border-radius: 16px;
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 10px;
-    color: #fff;
-    
-}
-
-/* Mobile Responsiveness */
-@media (max-width: 768px) {
-    .navbar-nav {
-      display: inline-block;
-      margin-left: 0;
-      padding-left: 0;
-      margin-right: 0;
-      padding-right: 0;
-      text-align: center;
-    }
-
-    .carousel-caption h1 {
-        font-size: 2em;
-    }
-
-    .carousel-caption p {
-        font-size: 1em;
-    }
-}
 
 .burger {
   width: 30px;
