--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -524,14 +524,6 @@ form button[type="submit"]:hover {
   color: #0056b3;
 }
 
-.close-btn {
-  color: #aaa;
-  position: absolute;
-  right: 20px;
-  top: 15px;
-  font-size: 28px;
-  cursor: pointer;
-}
 
 .accordion {
   background-color: #f1f1f1;
@@ -679,6 +671,104 @@ form button[type="submit"]:hover {
     padding-right: 15px;
     padding-left: 15px;
   }
+}
+
+.top-bar {
+  display: inline-block;
+  background-color: #17586456;
+  color: white;
+  padding: 1rem 0;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.top-bar a {
+  display: inline;
+  text-decoration: none;
+  text-align: justify;
+  justify-content: space-between;
+  padding: 1rem 1rem;
+}
+
+.top-bar .social-icons {
+  display: flex;
+  gap: 10px;
+  padding: 0 1rem;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+}
+
+.top-bar .social-icons a {
+  display: inline-block;
+  font-size: 1.5rem;
+  transition: color 0.3s ease;
+}
+
+.top-bar .social-icons a:hover {
+  color: #0056b3;
+}
+
+/* Navigation Bar */
+.navbar {
+  position: sticky;
+  display: inline-block;
+  background-color: #060f8ab6;
+  padding: 1rem 2rem;
+  box-shadow: 0 2px 4px rgba(107, 73, 1, 0.459);
+}
+
+.navbar .nav-brand{
+  position: absolute;
+  margin-left: 1rem;
+  display: flex;
+  padding: 0.5rem 1rem;
+}
+
+.navbar .nav-brand img {
+  width: 50px;
+  height: 50px;
+}
+
+.navbar .navbar-nav {
+  font-size: 14px;
+  float: right;
+  display: inline;
+  margin-right: auto;
+  list-style: none;
+  text-decoration: none;
+  justify-content: right;
+  gap: 1rem;
+}
+
+.navbar .navbar-nav li {
+  box-sizing: border-box;
+  border-radius: 5px;
+  list-style: none;
+  padding: 0.5rem 1rem;
+  display: inline-block;
+  margin: 0 1rem;
+  margin-right: 0;
+  text-decoration: none;
+  color: white;
+  font-weight: 600;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.navbar .navbar-nav li:hover {
+  background-color: #0056b3;
+  color: white;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.navbar .navbar-nav li.active {
+  background-color: #0056b3;
+  color: white;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 /* Events Section */
