--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@
 body {
   font-family: var(--font-family-primary);
   line-height: 1.6;
-  background-color: var(--g);
+  background-color: var(--gold);
   color: var(--white);
   font-size: 16px;
   overflow-x: hidden;
