--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,12 @@
   --font-family-secondary: "Display Playfair", serif;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: var(--font-family-primary);
   line-height: 1.6;
