--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ body {
   line-height: 1.6;
   background-color: var(--gold);
   color: var(--white);
-  font-size: 16px;
+  font-size: 1rem; /* Instead of 16px */
   overflow-x: hidden;
 }
 
@@ -69,7 +69,7 @@ h1, h2, h3, h4 {
 }
 
 .btn-primary {
-  background: var(--primary-color);
+  background: var(--primary-color, #136ad5); /* Fallback to #136ad5 */
   border-color: var(--primary-color);
   color: var(--white);
 }
@@ -2669,47 +2669,125 @@ form button[type="submit"]:hover {
   left: 0;
 }
 
-.owl-single .owl-nav {
+.owl-single .owl-dots,
+.owl-carousel .owl-dots {
+  text-align: center;
   position: absolute;
-  top: 50%;
   width: 100%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
 }
 
 @media (max-width: 767.98px) {
-  .owl-single .owl-nav {
+  .owl-single .owl-dots,
+  .owl-carousel .owl-dots {
     display: none;
   }
 }
 
-.owl-single .owl-nav .owl-prev,
-.owl-single .owl-nav .owl-next {
+.owl-single .owl-dots .owl-dot,
+.owl-carousel .owl-dots .owl-dot {
+  display: inline-block;
+  margin: 5px;
+}
+
+.owl-single .owl-dots .owl-dot span,
+.owl-carousel .owl-dots .owl-dot span {
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.owl-single .owl-dots .owl-dot.active span,
+.owl-carousel .owl-dots .owl-dot.active span {
+  background: #136ad5;
+}
+
+.owl-single.no-dots .owl-dots,
+.owl-carousel.no-dots .owl-dots {
+  display: none;
+}
+
+.owl-single.no-nav .owl-nav,
+.owl-carousel.no-nav .owl-nav {
+  display: none;
+}
+
+.owl-nav{
   position: absolute;
-  top: 0;
+  top: 50%;
+  bottom: 50%;
+  left: 0;
+  right: 0;
 }
 
-.owl-single .owl-nav .owl-prev span,
-.owl-single .owl-nav .owl-next span {
+.owl-nav.owl-prev,
+.owl-nav.owl-next {
+  position: absolute;
+  box-sizing: border-box;
+  width: 50px;
+  background: #035750;
+  line-height: 50px;
+  border-radius: 50%;
+  color: #310eb1d3;
+  line-height: 50px;
+}
+
+.owl-nav.owl-prev {
+  left: -50px;
+  left: 0;
+}
+
+.owl-nav.owl-next {
+  right: -50px;
+  right: 0;
+}
+
+.owl-nav.owl-prev:hover,
+.owl-nav.owl-next:hover {
+  background: #1776ea;
+}
+
+.owl-single.owl-dots.owl-dot.active,
+.owl-carousel.owl-dots.owl-dot.active {
+  background: #136ad5;
+}
+
+
+.testimonial {
+  max-width: 500px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.testimonial .name {
+  font-size: 18px;
+  color: #000000;
+}
+
+.testimonial .img-wrap img {
+  margin: 0 auto;
+  width: 70px;
+  border-radius: 50%;
+}
+
+.list-check li {
   display: block;
-  background: #ffffff;
-  padding: 15px;
-}
-
-.owl-single .owl-nav .owl-prev {
-  left: -30px;
-}
-
-.owl-single .owl-nav .owl-next {
-  right: -30px;
-}
-
-.owl-single .owl-nav .owl-next>span {
+  padding-left: 30px;
   position: relative;
-  -webkit-transform: rotate(-180deg);
-  -ms-transform: rotate(-180deg);
-  transform: rotate(-180deg);
+}
+
+.list-check li:before {
+  content: "\e5ca";
+  font-family: 'icomoon';
+  position: absolute;
+  top: -.3rem;
+  font-size: 20px;
+  left: 0;
 }
 
 .ul-check li {
@@ -2870,4 +2948,14 @@ form button[type="submit"]:hover {
 
 .team-item:hover .team-overlay {
   opacity: 1;
+}
+.btn:focus-visible,
+/* Burger Menu Styles */
+.burger {n:focus-visible {
+  ...line: 2px solid var(--primary-color);
+} outline-offset: 2px;
+}
+/* Burger Menu Styles */
+.burger {
+  ...
 }
