--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -586,11 +586,12 @@ form button[type="submit"]:hover {
   bottom: 20px;
   right: 20px;
   background-color: #25D366;
-  color: #fff;
+  color: white;
   border-radius: 50%;
   padding: 15px;
   z-index: 100;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  animation: bounce 2s infinite;
 }
 
 .whatsapp-float img {
@@ -598,20 +599,19 @@ form button[type="submit"]:hover {
   height: 25px;
 }
 
+@keyframes bounce {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+}
+
 .gutter-v1 {
   margin-right: -20px;
   margin-left: -20px;
 }
-
-@media (max-width: 991.98px) {
-  .gutter-v1 {
-    margin-left: -15px;
-    margin-right: -15px;
-  }
-}
-
-.gutter-v1>.col,
-.gutter-v1>[class*="col-"] {
   padding-right: 20px;
   padding-left: 20px;
 }
