--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1281,7 +1281,7 @@ form button[type="submit"]:hover {
 }
 
 .service-front {
-  background: white;
+  background: rgba(1, 49, 71, 0.685);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -1447,16 +1447,6 @@ form button[type="submit"]:hover {
 .likes {
   font-size: 1rem;
   color: #888;
-}
-
-.top-bar {
-  background-color: #17586456;
-  color: white;
-  padding: 1rem 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 .untree_co-section {
@@ -2252,7 +2242,6 @@ form button[type="submit"]:hover {
 }
 
 .services-section {
-  background: #f8f9fa;
   padding: 70px 0;
 }
 
@@ -2265,7 +2254,6 @@ form button[type="submit"]:hover {
 .img-wrap-2 .dotted:before {
   position: absolute;
   content: "";
-  background-image: url("../images/dotted.png");
   height: 273px;
   width: 313px;
   z-index: -1;
@@ -2569,98 +2557,6 @@ form button[type="submit"]:hover {
   height: 60px;
 }
 
-.owl-single.dots-absolute .owl-dots,
-.owl-carousel.dots-absolute .owl-dots {
-  bottom: 40px;
-}
-
-.owl-single.dots-absolute .owl-dots .owl-dot span,
-.owl-carousel.dots-absolute .owl-dots .owl-dot span {
-  background: rgba(255, 255, 255, 0.5);
-}
-
-.owl-single .owl-dots,
-.owl-carousel .owl-dots {
-  text-align: center;
-  position: absolute;
-  width: 100%;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  transform: translateX(-50%);
-}
-
-.owl-single .owl-dots .owl-dot,
-.owl-carousel .owl-dots .owl-dot {
-  display: inline-block;
-  margin: 5px;
-}
-
-.owl-single .owl-dots .owl-dot span,
-.owl-carousel .owl-dots .owl-dot span {
-  display: inline-block;
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  background: rgba(0, 0, 0, 0.2);
-}
-
-.owl-single .owl-dots .owl-dot.active span,
-.owl-carousel .owl-dots .owl-dot.active span {
-  background: #136ad5;
-}
-
-.owl-single.no-dots .owl-dots,
-.owl-carousel.no-dots .owl-dots {
-  display: none;
-}
-
-.owl-single.no-nav .owl-nav,
-.owl-carousel.no-nav .owl-nav {
-  display: none;
-}
-
-.owl-nav{
-  position: absolute;
-  top: 50%;
-  bottom: 50%;
-  left: 0;
-  right: 0;
-}
-
-.owl-nav.owl-prev,
-.owl-nav.owl-next {
-  position: absolute;
-  box-sizing: border-box;
-  width: 50px;
-  background: #035750;
-  line-height: 50px;
-  border-radius: 50%;
-  color: #310eb1d3;
-  line-height: 50px;
-}
-
-.owl-nav.owl-prev {
-  left: -50px;
-  left: 0;
-}
-
-.owl-nav.owl-next {
-  right: -50px;
-  right: 0;
-}
-
-.owl-nav.owl-prev:hover,
-.owl-nav.owl-next:hover {
-  background: #1776ea;
-}
-
-.owl-single.owl-dots.owl-dot.active,
-.owl-carousel.owl-dots.owl-dot.active {
-  background: #136ad5;
-}
-
-
 .testimonial {
   max-width: 500px;
   text-align: center;
@@ -2691,101 +2587,6 @@ form button[type="submit"]:hover {
   top: -.3rem;
   font-size: 20px;
   left: 0;
-}
-
-.owl-single .owl-dots,
-.owl-carousel .owl-dots {
-  text-align: center;
-  position: absolute;
-  width: 100%;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  transform: translateX(-50%);
-}
-
-@media (max-width: 767.98px) {
-  .owl-single .owl-dots,
-  .owl-carousel .owl-dots {
-    display: none;
-  }
-}
-
-.owl-single .owl-dots .owl-dot,
-.owl-carousel .owl-dots .owl-dot {
-  display: inline-block;
-  margin: 5px;
-}
-
-.owl-single .owl-dots .owl-dot span,
-.owl-carousel .owl-dots .owl-dot span {
-  display: inline-block;
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  background: rgba(0, 0, 0, 0.2);
-}
-
-.owl-single .owl-dots .owl-dot.active span,
-.owl-carousel .owl-dots .owl-dot.active span {
-  background: #136ad5;
-}
-
-.owl-single.no-dots .owl-dots,
-.owl-carousel.no-dots .owl-dots {
-  display: none;
-}
-
-.owl-single.no-nav .owl-nav,
-.owl-carousel.no-nav .owl-nav {
-  display: none;
-}
-
-.owl-nav{
-  position: absolute;
-  top: 50%;
-  bottom: 50%;
-  left: 0;
-  right: 0;
-}
-
-.owl-nav.owl-prev,
-.owl-nav.owl-next {
-  position: absolute;
-  box-sizing: border-box;
-  width: 50px;
-  background: #035750;
-  line-height: 50px;
-  border-radius: 50%;
-  color: #310eb1d3;
-  line-height: 50px;
-}
-
-.owl-nav.owl-prev {
-  left: -50px;
-  left: 0;
-}
-
-.owl-nav.owl-next {
-  right: -50px;
-  right: 0;
-}
-
-.owl-nav.owl-prev:hover,
-.owl-nav.owl-next:hover {
-  background: #1776ea;
-}
-
-.owl-single.owl-dots.owl-dot.active,
-.owl-carousel.owl-dots.owl-dot.active {
-  background: #136ad5;
-}
-
-
-.testimonial {
-  max-width: 500px;
-  text-align: center;
-  margin-bottom: 30px;
 }
 
 .testimonial .name {
@@ -2843,7 +2644,6 @@ form button[type="submit"]:hover {
 }
 
 .site-footer {
-  background: #136ad5;
   font-size: 14px;
   color: #ffffff;
   padding: 70px 0;
@@ -2893,11 +2693,11 @@ form button[type="submit"]:hover {
 }
 
 .site-footer .social li a {
+  padding: 1rem 0.5rem;
   display: inline-block;
   width: 30px;
   height: 30px;
   position: relative;
-  background-color: #ffffff;
   border-radius: 50%;
   color: #000000;
 }
